# boilerplate

./: .gitignore  CMakeLists.txt  info.h.in  main.cpp  readme.md
resources/templates/cmake/module/: CMakeLists.txt  recipe.txt
resources/templates/cpp/proj/: CMakeLists.txt  main.cpp  recipe.txt
